# canzero

./: .gitignore  README.md  canzero-do-shit.sh  index.html  package-lock.json  package.json  splashscreen.html  unix_build.sh  vite.config.ts  vite.config.ts.timestamp-1702156936044-c2797e1b608ae.mjs  °!
.github/workflows/: tauri-test.yml
network_config/: buses.yaml  config.yaml  enums.yaml  gamepad.yaml  guidance_board.yaml  input_board.yaml  levitation_board.yaml  mother_board.yaml  motor_driver.yaml  perf.yaml  power_board12.yaml  power_board24.yaml  structs.yaml  test.yaml
src/: App.tsx  Content.tsx  FloatingPlotContent.tsx  SettingsContent.tsx  StartupApp.tsx  StartupContent.tsx  StartupStepper.tsx  main.tsx  settings.tsx  styles.css  theme.ts
src-tauri/: .gitignore  Cargo.toml  README.md  back.yaml  tauri.conf.json  test.yaml
src-tauri/lib/appdata/src/: lib.rs
src-tauri/lib/cli/: Cargo.toml  logging-node.py
src-tauri/lib/cli/src/: client.rs  dump.rs  lib.rs  main.rs  status.rs  update.rs
src-tauri/lib/codegen/: Cargo.toml
src-tauri/lib/codegen/examples/: simple.yaml
src-tauri/lib/codegen/src/: includes.rs  lib.rs  messages.rs  object_entries.rs  pil.rs  rx_handlers.rs  scheduler.rs  setters.rs  setup.rs  types.rs
src-tauri/lib/common/src/: lib.rs
src-tauri/lib/config/src/builder/: network_builder.rs  node.rs  object_entry_builder.rs
src-tauri/lib/config/src/builder/message_resolution/assign_messages/: mod.rs
src-tauri/lib/config/src/builder/message_resolution/filter_configuration/: mod.rs
src-tauri/lib/config/src/config/: network.rs  node.rs  object_entry.rs
src-tauri/lib/server/src/: lib.rs
src-tauri/lib/server/src/network/: mod.rs
src-tauri/lib/tcp/src/: frame.rs  lib.rs  tcpcan.rs
src-tauri/lib/udp/: Cargo.toml
src-tauri/lib/udp/src/: beacon.rs  frame.rs  scanner.rs
src-tauri/lib/yaml/src/: parser.rs
src-tauri/src/: input_controller.rs  main.rs  notification.rs
src-tauri/src/can/: can_frame.rs  mock_can.rs  mod.rs  rx.rs  trace.rs
src-tauri/src/can/can/: mod.rs
src-tauri/src/can/frame/: error_frame.rs  mod.rs  signal_frame.rs  type_frame.rs  undefined_frame.rs
src-tauri/src/can/handler/: command_resp_frame_handler.rs  empty_frame_handler.rs  get_resp_frame_handler.rs  mod.rs  set_resp_frame_handler.rs  stream_frame_handler.rs
src-tauri/src/can/network/: command_object.rs  mod.rs  node_object.rs  object_entry_object.rs
src-tauri/src/can/parser/: error_frame_parser.rs  mod.rs  signal_frame_parser.rs  type_frame_parser.rs  undefined_frame_parser.rs
src-tauri/src/cnl/: can_frame.rs  command.rs  connection.rs  error_observable.rs  errors.rs  gamepad.rs  mock_can.rs  mod.rs  rx.rs  rx_dep.rs  timestamped.rs  trace.rs  trace_dep.rs  tx.rs
src-tauri/src/cnl/can/: mod.rs  socket.rs
src-tauri/src/cnl/can_adapter/: can_error.rs  can_frame.rs  mod.rs  timestamped.rs
src-tauri/src/cnl/can_adapter/mock_can/: mod.rs
src-tauri/src/cnl/can_adapter/socket_can/: mod.rs  socket.rs
src-tauri/src/cnl/can_adapter/tcp/: client.rs  mod.rs
src-tauri/src/cnl/deserialize/: encoding_deserializer.rs  mod.rs  signal_deserializer.rs  type_deserializer.rs
src-tauri/src/cnl/frame/: error_frame.rs  mod.rs  signal_frame.rs  type_frame.rs  undefined_frame.rs
src-tauri/src/cnl/handler/: command_resp_frame_handler.rs  empty_frame_handler.rs  get_req_frame_handler.rs  get_resp_frame_handler.rs  heartbeat_frame_handler.rs  mod.rs  set_req_frame_handler.rs  set_resp_frame_handler.rs  stream_frame_handler.rs
src-tauri/src/cnl/network/: command_object.rs  mod.rs  node_object.rs  object_entry_object.rs  set_request.rs
src-tauri/src/cnl/network/node_object/: heartbeat_observable.rs  mod.rs
src-tauri/src/cnl/network/node_object/latest/: mod.rs
src-tauri/src/cnl/network/object_entry_object/: mod.rs  vlistener.rs
src-tauri/src/cnl/network/object_entry_object/history/: mod.rs
src-tauri/src/cnl/network/object_entry_object/info/: mod.rs  ty.rs
src-tauri/src/cnl/network/object_entry_object/latest/: event.rs  mod.rs
src-tauri/src/cnl/parser/: error_frame_parser.rs  mod.rs  signal_frame_parser.rs  type_frame_parser.rs  undefined_frame_parser.rs
src-tauri/src/cnl/rx/: can_receiver.rs  handler_lookup.rs  mod.rs
src-tauri/src/cnl/trace/: database.rs  event.rs  frame.rs  mod.rs
src-tauri/src/cnl/watchdog/: mod.rs
src-tauri/src/commands/: commands.rs  connection_status.rs  errors.rs  export.rs  mod.rs  network_information.rs  node_commands.rs  object_entry_commands.rs  search_string_storage.rs  settings.rs  splashscreen.rs  startup.rs  trace.rs
src-tauri/src/observers/: mod.rs  observable_data.rs
src-tauri/src/serialize/: mod.rs  serialized_frame.rs
src-tauri/src/state/: address_state.rs  cnl_state.rs  mod.rs  startup.rs
src-tauri/src/stream_object/: mod.rs
src/app_bar/: AppBarButton.tsx  CustomAppBar.tsx  StateDisplay.tsx  StateIndicatorBar.tsx  StateIndiciatorBar.tsx  commands.ts
src/components/: ControlBar.tsx  ControlButtons.tsx  ControlGrid.tsx  ControlTable.tsx  EstablishConnection.tsx  FrameData.tsx  FrameDescription.tsx  FrameDlc.tsx  FrameId.tsx  FrameName.tsx  FrameSorting.tsx  FrameTime.tsx  Graph.tsx  GridButtons.tsx  KarlsTraceExample.tsx  NotificationSystem.tsx  PodTemperatures.tsx  RandomNumber.tsx  SignalFrameDetail.tsx  TraceGrid.tsx  TraceSearchBar.tsx  TypeFrameDetail.tsx
src/dashboard/: ControlBar.tsx  (+9 more)
(+156 files in other folders)
