[package]
name = "control_panel"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
rand = "0.8.5"
libc = {version = "0.2.149", optional = true}
nix = {version = "0.27.1", features = ["net"], optional = true }
can-config-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-config-rs.git" }
can-yaml-config-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-yaml-config-rs.git" }
sorted-vec = "0.8.3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs.git"}

[features]
default = ["mock-can"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
mock-can = []
socket-can = ["dep:libc", "dep:nix"]
