[package]
name = "control_panel"
version = "0.0.0"
description = "Control Panel for the muzero CAN protocol. Developed for mu-zero HYPERLOOP Season IV."
authors = ["Karl Sassie", "Jakob Schmit", "Niklas Henaka", "Nicolas Fliegel"]
repository = "https://github.com/mu-zero-HYPERLOOP/control-panel.git"
edition = "2021"
rust-version = "1.75"

[profile.dev]
debug = true
codegen-units = 8
lto = false

[profile.release]
strip = "symbols"  # Automatically strip symbols from the binary.
lto = "fat" # Enables link to optimizations
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "cli", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
rand = {version = "0.8.5", features= ["std_rng"] }
libc = {version = "0.2.149", optional = true}
nix = {version = "0.28.0", features = ["net"], optional = true }
can-config-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-config-rs.git" }
can-appdata = { git = "https://github.com/mu-zero-HYPERLOOP/can-appdata.git" }
can-yaml-config-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-yaml-config-rs.git" }
sorted-vec = "0.8.3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs.git"}
bitvec = "1.0.1"
chrono = { version = "0.4.34", features = [ "serde" ] }
gamepads = "0.1.6"
csv = "1.3.0"

[features]
default = ["socket-can"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Custom features!
mock-can = []
socket-can = ["dep:libc", "dep:nix"]
tcp-can = []
logging-invoke = []
