[package]
name = "control_panel"
version = "0.0.0"
description = "Control Panel for the muzero CAN protocol. Developed for mu-zero HYPERLOOP Season IV."
authors = ["Karl Sassie", "Jakob Schmit", "Niklas Henaka", "Nicolas Fliegel"]
repository = "https://github.com/mu-zero-HYPERLOOP/control-panel.git"
edition = "2021"
rust-version = "1.75"

[profile.dev]
debug = true
codegen-units = 8
lto = false

[profile.release]
strip = "symbols"  # Automatically strip symbols from the binary.
lto = "fat" # Enables link time optimizations
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "cli", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
can-config-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-config-rs.git" }
can-appdata = { git = "https://github.com/mu-zero-HYPERLOOP/can-appdata.git" }
can-yaml-config-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-yaml-config-rs.git" }
can-tcp-bridge-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-tcp-bridge-rs.git" }
canzero-common = { git = "https://github.com/mu-zero-HYPERLOOP/canzero-common.git" }
can-socketcan-platform-rs = { git = "https://github.com/mu-zero-HYPERLOOP/can-socketcan-platform-rs.git", optional = true}
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs.git"}
bitvec = "1.0.1"
chrono = { version = "0.4.34", features = [ "serde" ] }
csv = "1.3.0"
nix = { version = "0.28.0", features = ["net"], optional = true}


[features]
default = ["socket-can"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

socket-can = ["dep:can-socketcan-platform-rs", "dep:nix"]
# Custom features!
logging-invoke = []
